Update LinkedIn URL

--- a/templates/base.html
+++ b/templates/base.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="col s12 m6 center-align">
                     <a href="https://github.com/MohammedMoota" target="_blank"><i class="fab fa-github fa-lg"></i></a>
-                    <a href="https://www.linkedin.com/in/mohammedmoota/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
+                    <a href="https://www.linkedin.com/in/mohammed-moota-631326355" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
                 </div>
             </div>
         </div>
